--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <h1>Constructing the Geological Time Scale of Earth</h1>
-    <div class="timestamp" id="timestamp">Loading timestamp...</div>
+    <div class="timestamp" id="timestamp">Loading timestamp... <div id="date-container"></div>
+    </div>
 
     <p>
         Constructing the geological time scale of Earth is like decoding a history book written in the language of rocks
