--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <h1>Constructing the Geological Time Scale of Earth</h1>
-    <div class="timestamp" id="timestamp">Loading timestamp... <div id="date-container"></div>
+    <div class="timestamp" id="timestamp">Loading timestamp... <div id="date-container">
+            <p id="timestamp-js"></p>
+        </div>
     </div>
 
     <p>
