--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="site.css">
     <script defer src="app.js"></script>
 
+
 </head>
 
 <body>
     <h1>Constructing the Geological Time Scale of Earth</h1>
-    <div class="timestamp" id="timestamp">Loading timestamp... <div id="date-container">
-            <p id="timestamp-js"></p>
-        </div>
+    <div class="timestamp" id="timestamp">Loading timestamp... <div id="date-container"></div>
     </div>
 
     <p>
