--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geological Time Scale</title>
     <link rel="stylesheet" href="site.css">
+    <script defer src="app.js"></script>
 
 
 </head>
@@ -13,7 +14,6 @@
 <body>
     <h1>Constructing the Geological Time Scale of Earth</h1>
     <div id="commit-date"></div>
-    <script type="module" src="app.js"></script>
 
 
     <p>
